ui/src/app/session-view/session-view.component.scss
.editor-field {
  width: 100%;
  position: relative;
  overflow: hidden;
  flex-grow: 1;
}

.dropdowns-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  flex-basis: content;
  gap: 0px;
}

.dropdown-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  min-height: 80px;
  flex-basis: content;
  gap: 0px;
}

.home-button {
  font-family: "Courier New", Courier, monospace;
  font-size: 2em;
}

.top-bar-row {
  width: 100%;
}

.content-container {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  height: 100%;
}

